--- a/css/main.css
+++ b/css/main.css
@@ -11,16 +11,15 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
 }
-
 .result {
+    min-height: 110px;
     color: black;
-    padding: 1rem 2rem 1rem 1rem;
+    padding: 1rem 1rem 1rem 1rem;
     margin: 5rem 1rem 2rem;
     font-size: 6rem;
     text-align: right;
     grid-column: 1 / 5;
 }
-
 .grayBG {
     background-color: #A6A6A6;
     color: black;
@@ -44,8 +43,6 @@
     grid-column: 1 / 3;
     padding-left: 40px;
 }
-
 .br {
     border-radius: 50%;
 }
-
